[package]
name = "oysterlang"
version = "0.1.0"
authors = ["Chris Kuech <cjkuech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
num-derive = "*"

[dependencies.regex]
version = "*"
features = ["pattern"]
